# cpp-vsl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  _run_tests.bat  actions.py  format.py  msvc_setvars.bat  setvars.bat  vcpkg.json
cmake/: const.cmake  crt_linkage.cmake  functions.cmake  lang_cxx.cmake  lang_fortran.cmake  linux.cmake  modules.cmake
test/: run_tests.cpp  run_tests.h
vsl/: assert.h  concepts.h  concepts.test.cpp  container.h  csv.h  csv.test.cpp  debug.h  debug.test.cpp  encoding.h  encoding.test.cpp  encoding_charsets.h  enum.h  enum.test.cpp  env.h  env.test.cpp  flat_map.h  flat_map.test.cpp  json.h  json.test.cpp  lookup_table.h  lookup_table.test.cpp  math.h  math.test.cpp  os.h  pointer.h  pointer.test.cpp  reflection.h  reflection.test.cpp  regex.h  regex.test.cpp  tabulate.h  tabulate.test.cpp  text.h  text.test.cpp  text_trim.h  types.h  types.test.cpp  unicode.h  unicode.test.cpp  util.h  (+1 more)
vsl/benchmark/: benchmark.cpp
vsl/encodings/: all.h  cp1251.h  cp866.h  detail.h  translit_ru.h
vsl/interrupt/: demo.cpp  example.cpp  interrupt.h  interrupt_impl.h
vsl/tabulate/: tabulate.h  tabulate.test.cpp
vsl/tcp/: tcp_buffer.h  tcp_client.h  tcp_client_impl.h  tcp_listener.h  tcp_listener_impl.h  test.cpp
